--- a/src/partials/hero/search-hero.html
+++ b/src/partials/hero/search-hero.html
@@ -1,17 +1,163 @@
-<section>
-  <select class="hero-mobyle-js" id="keyboardmin"></select>
-  <div class="js-keyboard" id="keyboard"></div>
+<section class="container">
+  <p class="visually-hidden">
+    Selected option text: <span class="text-output">none</span>
+  </p>
+
+  <p>
+    <select class="hero-mobyle-js" id="keyboardmin">
+      <option data="65" class="hero-mobyle-min">A</option>
+      <option data="66" class="hero-mobyle-min">B</option>
+      <option data="67" class="hero-mobyle-min">C</option>
+      <option data="68" class="hero-mobyle-min">D</option>
+      <option data="69" class="hero-mobyle-min">E</option>
+      <option data="70" class="hero-mobyle-min">F</option>
+      <option data="71" class="hero-mobyle-min">G</option>
+      <option data="72" class="hero-mobyle-min">H</option>
+      <option data="73" class="hero-mobyle-min">I</option>
+      <option data="74" class="hero-mobyle-min">J</option>
+      <option data="75" class="hero-mobyle-min">K</option>
+      <option data="76" class="hero-mobyle-min">L</option>
+      <option data="77" class="hero-mobyle-min">M</option>
+      <option data="78" class="hero-mobyle-min">N</option>
+      <option data="79" class="hero-mobyle-min">O</option>
+      <option data="80" class="hero-mobyle-min">P</option>
+      <option data="81" class="hero-mobyle-min">Q</option>
+      <option data="82" class="hero-mobyle-min">R</option>
+      <option data="83" class="hero-mobyle-min">S</option>
+      <option data="84" class="hero-mobyle-min">T</option>
+      <option data="85" class="hero-mobyle-min">U</option>
+      <option data="86" class="hero-mobyle-min">V</option>
+      <option data="87" class="hero-mobyle-min">W</option>
+      <option data="88" class="hero-mobyle-min">X</option>
+      <option data="89" class="hero-mobyle-min">Y</option>
+      <option data="90" class="hero-mobyle-min">Z</option>
+      <option data="49" class="hero-mobyle-min">1</option>
+      <option data="50" class="hero-mobyle-min">2</option>
+      <option data="51" class="hero-mobyle-min">3</option>
+      <option data="52" class="hero-mobyle-min">4</option>
+      <option data="53" class="hero-mobyle-min">5</option>
+      <option data="54" class="hero-mobyle-min">6</option>
+      <option data="55" class="hero-mobyle-min">7</option>
+      <option data="56" class="hero-mobyle-min">8</option>
+      <option data="57" class="hero-mobyle-min">9</option>
+      <option data="48" class="hero-mobyle-min">0</option>
+    </select>
+  </p>
+
+  <ul class="js-keyboard" id="keyboard">
+    <li>
+      <button type="button" class="keyboard-letter" data="65">A</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="66">B</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="67">C</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="68">D</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="69">E</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="70">F</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="71">G</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="72">H</button>
+    </li>
+    <li><button type="button" class="keyboard-letter" data="73">I</button></li>
+    <li><button type="button" class="keyboard-letter" data="74">J</button></li>
+    <li><button type="button" class="keyboard-letter" data="75">K</button></li>
+    <li>
+      <button type="button" class="keyboard-letter" data="76">L</button>
+    </li>
+    <li><button type="button" class="keyboard-letter" data="77">M</button></li>
+    <li>
+      <button type="button" class="keyboard-letter" data="78">N</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="79">O</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="80">P</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="81">Q</button>
+    </li>
+    <li><button type="button" class="keyboard-letter" data="82">R</button></li>
+    <li>
+      <button type="button" class="keyboard-letter" data="83">S</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="84">T</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="85">U</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="86">V</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="87">W</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="88">X</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="89">Y</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="90">Z</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="49">1</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="50">2</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="51">3</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="52">4</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="53">5</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="54">6</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="55">7</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="56">8</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="57">9</button>
+    </li>
+    <li>
+      <button type="button" class="keyboard-letter" data="48">0</button>
+    </li>
+  </ul>
   <form class="search-form">
     <div class="search-input-block">
       <input
         type="text"
-        class="search-js"
+        class="text-input"
         name="search"
         id="search"
         placeholder="Search"
         required
         pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ0-9 ]+"
       />
+      <p class="visually-hidden">
+        Text field value: <span class="output"></span>
+      </p>
       <div class="container-svg">
         <svg
           class="input-icon-hero"
