--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -4,22 +4,27 @@
 
   <div class="container page-header-container">
    <div class="mobile-desktop-menu">
+    
 <a href="" class="header-mobile-menu-link home-link link"><span class="menu-list-mob">Home</span></a>
-      <a href="" class="header-mobile-menu-link favorite-link link"><span class="menu-list-mob">Favorite</span></a>
+     <div id="" class="sprite cursor-list">
+<a   class="header-mobile-menu-link favorite-link link"><span class="menu-list-mob">Favorite</span></a>
 
-      <div>
-        <svg id="sprite" class="chevron-desing" width="24" height="24">
+        <svg  class="chevron-desing" width="24" height="24">
         <use href="./img/sprite.svg#icon-chevron-down"></use>
+      
       </svg>
-      
+
       </div> 
+    
       
-    <div id="hiddenDiv" class="hidden-list" style="display: none;">
+    <div id="" class="hiddenDiv hidden-list" style="display: none;">
         <!-- Содержимое div блока -->
         <a href="./favCocktails.html" class="header-mobile-list link">Favorite cocktails</a>
     <a href="./ingredients.html" class="header-mobile-list link">Favorite ingredients</a>
       </div>
-      </div> 
+      
+      
+    </div> 
        
     <a class="header-logo" href="./index.html"
         ><span class="header-logo-span">Drinkify</span
@@ -39,6 +44,7 @@
         <use href="./img/sprite.svg#icon-align-justify"></use>
       </svg>
     </button>
+ 
   </div>
   
   <div class="page-header header-mobile-menu js-menu-container">
@@ -66,17 +72,17 @@
     </div>
 
     <div class="header-mobile-menu-list list">
-      <!-- <p class="header-mobile-menu-item"> -->
+     
         <a href="" class="header-mobile-menu-link link"><span class="menu-list-mob">Home</span></a>
       <div class="chevron">
-      <!-- <p class="chevron header-mobile-menu-item"> -->
+      
         <a href="" class="header-mobile-menu-link link">Favorite</a>
         <svg id="sprite" width="32" height="32">
         <use href="./img/sprite.svg#icon-chevron-down"></use>
       </svg>
         </div>
     <div id="hiddenDiv" class="hidden-list" style="display: none;">
-        <!-- Содержимое div блока -->
+        
         <a href="./favCocktails.html" class="header-mobile-list link">Favorite cocktails</a>
     <a href="./ingredients.html" class="header-mobile-list link">Favorite ingredients</a>
       </div>
