--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -9,7 +9,7 @@
      <div id="" class="sprite cursor-list">
 <a   class="header-mobile-menu-link favorite-link link"><span class="menu-list-mob">Favorite</span></a>
 
-        <svg  class="chevron-desing" width="24" height="24">
+        <svg  class="chevron-desing" width="24px" height="24px">
         <use href="./img/sprite.svg#icon-chevron-down"></use>
       
       </svg>
@@ -28,7 +28,7 @@
        
     <a class="header-logo" href="./index.html"
         ><span class="header-logo-span">Drinkify</span
-        ><svg class="header-icon-logo" width="24" height="20" >
+        ><svg class="header-icon-logo" width="24px" height="20px" >
           <use href="./img/sprite.svg#icon-cocktail"></use>
         </svg>
       </a>
@@ -40,7 +40,7 @@
    
 
     <button type="button" class="header-menu-btn js-open-menu">
-      <svg class="header-menu-btn-icon" width="28" height="28">
+      <svg class="header-menu-btn-icon" width="28px" height="28px">
         <use href="./img/sprite.svg#icon-align-justify"></use>
       </svg>
     </button>
@@ -51,7 +51,7 @@
    <div class="page-header-container container">
     <a class="header-logo" href="./index.html"
         ><span class="header-logo-span header-logo-span-w">Drinkify</span
-        ><svg class="icon-logo-w"  width="24" height="20" >
+        ><svg class="icon-logo-w"  width="24px" height="20px" >
           <use href="./img/sprite.svg#icon-cocktail"></use>
         </svg>
       </a>
@@ -64,7 +64,7 @@
       type="button"
       class="mobile-menu-close-btn js-close-menu"
     >
-      <svg class="mobile-menu-close-icon" width="32" height="32">
+      <svg class="mobile-menu-close-icon" width="32px" height="32px">
         <use href="./img/sprite.svg#icon-close"></use>
       </svg>
     </button>
@@ -88,7 +88,7 @@
       </div>
        
 </div>
-<svg class="star" width="" height="">
+<svg class="star" width="391px" height="391px">
         <use href="./img/sprite.svg#icon-star_combo_7"></use>
       </svg>
   </div>
