--- a/src/css/hero/search-hero.css
+++ b/src/css/hero/search-hero.css
@@ -16,28 +16,26 @@
 .is-flipped{
   
 }
+/* 
+::-webkit-scrollbar:vertical{
+  scrollbar-color: rgba(156, 223, 223, 0.80);
+  scrollbar-width: 3px;
+}  */
 
 
 
-::-webkit-scrollbar-thumb{
-
-
-
-}
 .actives{
   background: #9CDFDF;
 border: 1px solid #9CDFDF;
 }
 
 .choices {
-  
-  width: 90px;
-}
-.choices:last-child {
   margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
+  width: 90px;
 }
+
 
 .is-flipped.is-open.choices__inner{
   border-radius: 4px;
@@ -46,7 +44,7 @@ border: 1px solid #9CDFDF;
 .choices__inner {
   height: 40px;
   font-family: Poppins;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 600;
   line-height: 1.28;
@@ -78,6 +76,7 @@ border: 1px solid rgba(126, 143, 221, 0.40);
   max-height: 84px;
   overflow: scroll;
   will-change: scroll-position;
+
 }
 .is-flipped .choices__list--dropdown, 
 .is-flipped .choices__list[aria-expanded] {
@@ -232,6 +231,8 @@ border: 1px solid #9CDFDF;
 }
 
 .container-svg {
+  border: none;
+  background: none;
   position: absolute;
   top: 50%;
   left: 14px;
@@ -250,6 +251,7 @@ border: 1px solid #9CDFDF;
   height: 44px;
   border-radius: 80px;
   border: 2px solid var(--main-color);
+  background-color: transparent;
 
   /* text */
   color: rgba(36, 36, 36);
