--- a/src/css/header.css
+++ b/src/css/header.css
@@ -92,6 +92,7 @@ color: #FDFDFF
 .page-header-container {
   
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
 }
@@ -209,7 +210,17 @@ letter-spacing: 0.28px;
 {
 color: #FDFDFF;
 }
-
+ .cursor-list{
+  cursor: pointer;
+      display: flex;
+    align-items: center;
+  
+}
+.hidden-list{
+  flex-direction: column;
+    align-items: center;
+      gap: 8px;
+}
 .star{
   display: none;
 }
@@ -369,9 +380,9 @@ flex-direction: column;
 justify-content: center;
 align-items: flex-start;
 gap: 8px;
-    position: fixed;
-    top: 68px;
-    left: 210px;
+   position: absolute;
+    top: 33px;
+    left: 121px
 }
   
   .chevron-desing{
