--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -32,11 +32,16 @@
           <use href="./img/sprite.svg#icon-cocktail"></use>
         </svg>
       </a>
-    <label class="switch switch-desktop">
+    <!-- <label class="switch switch-desktop">
   <input type="checkbox" checked>
   <span class="slider round"></span>
-</label>
+</label> -->
    
+<label class="switch switch-desktop" id="theme-switcher">
+  <input type="checkbox">
+  <span class="slider round"></span>
+</label>
+
    
 
     <button type="button" class="header-menu-btn js-open-menu">
