--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -1,5 +1,5 @@
 /* hero-css */
-/* .title-hero {
+.title-hero {
     color: var(--light-letters-color);
 }
 
@@ -58,10 +58,10 @@
         color: var(--light-letters-color);
     }
 
-} */
+}
 
 /* search-hero-css */
-/* .actives {
+.actives {
     background: #9CDFDF;
     border: 1px solid #9CDFDF;
 }
@@ -144,17 +144,17 @@
 
 .active {
     background: var(--hover-color);
-} */
+} 
 
 /* coctailsMarckup-css */
 
-/* .main-title {
+ .main-title {
     color: var(--light-letters-color);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-} */
+} 
 
 /* Card  */
-/* .cocktail-card {
+ .cocktail-card {
     background-color: var(--light-letters-color);
     box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
@@ -165,7 +165,7 @@
 } */
 
 /* Dscription  */
-/* .cocktail-description-container {
+ .cocktail-description-container {
     background-color: transparent;
 }
 
@@ -179,7 +179,7 @@
 
 /* Buttons  */
 
-/* .card-button-learn-more {
+ .card-button-learn-more {
     color: var(--light-letters-color);
     background-color: transparent;
     border: 1px solid var(--main-color);
@@ -210,7 +210,7 @@
 
 /* favCoctails-css */
 
-/* .title-page {
+ .title-page {
     color: #242424;
 }
 
@@ -220,7 +220,7 @@
 
 /* header-css */
 
-/* .header-logo-span {
+ .header-logo-span {
     color: #000000;
 }
 
@@ -251,7 +251,7 @@
 } */
 
 /* mobile menu */
-/* .header-mobile-menu {
+ .header-mobile-menu {
     background: #7E8FDD;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -320,7 +320,7 @@ input:checked+.slider:before {
 } */
 
 /* Rounded sliders */
-/* .slider.round {
+ .slider.round {
     border: 1px solid #9CDFDF;
 }
 
@@ -346,7 +346,7 @@ input:checked+.slider:before {
 } */
 
 /* desktop */
-/* @media screen and (min-width: 1280px) {
+ @media screen and (min-width: 1280px) {
 
 
     .hiddenDiv {
@@ -397,7 +397,7 @@ input:checked+.slider:before {
 
 /* modalCokctails-css */
 
-/* .backdrop {
+ .backdrop {
     background-color: rgb(21 21 21 / 60%);
     transition: all 250ms linear;
 }
@@ -435,7 +435,7 @@ input:checked+.slider:before {
     background: var(--main-color);
     border-color: transparent;
     color: var(--light-letters-color);
-}
+} */
 
 .modal-btn-addfavorites:hover {
     background: #6E7FCF;
@@ -460,7 +460,7 @@ input:checked+.slider:before {
 
 /* modalIngredients-css */
 
-/* .ingredient-type {
+ .ingredient-type {
     color: rgba(36, 36, 36, 0.5);
 }
 
@@ -486,4 +486,4 @@ input:checked+.slider:before {
 
 .ingredient-characteristic-descr {
     color: rgba(36, 36, 36, 0.8);
-} */
+}
