--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -44,12 +44,21 @@
   @media screen and (min-width: 1280px) {
     body {
       background-size: cover;
+      background-image: url(../img/bcg-image/desktop-bcg-img.png);
+    }
+   
+    .dark-theme body {
+      background-size: cover;
       background-image: url(../img/bcg-image/dark-desktop-bcg-img.png);
     }
     @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    body {
+      body {
+        background-image: url(../img/bcg-image/desktop-bcg-img@2x.png);
+      }
+    
+       .dark-theme  body {
         background-image: url(../img/bcg-image/dark-desktop-bcg-img@2x.png);
       }
     }
@@ -62,24 +71,24 @@
   
 
 
-.title-hero {
+.dark-theme .title-hero {
     color: var(--light-letters-color);
 }
 
-.title-hero-span {
+.dark-theme .title-hero-span {
     color: var(--main-color);
 }
 
-.hero-text {
+.dark-theme .hero-text {
     color: var(--light-letters-color);
 }
 
-.btn-hero-scroll {
+.dark-theme .btn-hero-scroll {
     background: var(--main-color);
     color: var(--light-letters-color);
 }
 
-.rectangle {
+.dark-theme .rectangle {
     background: var(--main-color);
     box-shadow: 0px 28px 75px 0px rgba(88, 109, 204, 0.5);
 }
