--- a/src/css/theme-light.css
+++ b/src/css/theme-light.css
@@ -62,43 +62,43 @@
   
 
 
-.title-hero {
+ .light-theme .title-hero {
     color: var(--light-letters-color);
 }
 
-.title-hero-span {
+ .light-theme .title-hero-span {
     color: var(--main-color);
 }
 
-.hero-text {
+ .light-theme .hero-text {
     color: var(--light-letters-color);
 }
 
-.btn-hero-scroll {
+ .light-theme .btn-hero-scroll {
     background: var(--main-color);
     color: var(--light-letters-color);
 }
 
-.rectangle {
+ .light-theme .rectangle {
     background: var(--main-color);
     box-shadow: 0px 28px 75px 0px rgba(88, 109, 204, 0.5);
 }
 
-.img-text {
+ .light-theme .img-text {
     color: var(--light-letters-color);
 }
 
 @media screen and (min-width: 768px) {
 
-    .title-hero {
+    .light-theme  .title-hero {
         color: var(--light-letters-color);
     }
 
-    .title-hero-span {
+    .light-theme  .title-hero-span {
         color: var(--main-color);
     }
 
-    .hero-text {
+     .light-theme .hero-text {
         color: var(--light-letters-color);
     }
 
