--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 767.9px) {
+/* @media screen and (max-width: 767.9px) {
     body {
       background-size: cover;
       background-image: url(../img/bcg-image/dark-mobile-bcg-image.png);
@@ -544,4 +544,4 @@ input:checked+.slider:before {
 
 .ingredient-characteristic-descr {
     color: rgba(36, 36, 36, 0.8);
-} 
+}  */
