--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -62,10 +62,17 @@
         </svg>
       </a>
       <div class="check-position">
-      <label class="switch">
+      <!-- <label class="switch">
   <input type="checkbox" checked>
   <span class="slider round"></span>
+</label> -->
+ <label class="switch">
+  <!-- <input type="checkbox" checked> -->
+  <input id="theme-switcher" type="checkbox" checked>
+  <span class="slider round"></span>
 </label>
+
+
       <button
       type="button"
       class="mobile-menu-close-btn js-close-menu"
@@ -98,6 +105,4 @@
         <use href="./img/sprite.svg#icon-star_combo_7"></use>
       </svg>
   </div>
-  
-  <script src="src/main.js"></script>
 </header>
