--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -5,7 +5,7 @@
   <div class="container page-header-container">
    <div class="mobile-desktop-menu">
     
-<a href="" class="header-mobile-menu-link home-link link"><span class="menu-list-mob">Home</span></a>
+<a href="./index.html" class="header-mobile-menu-link home-link link"><span class="menu-list-mob">Home</span></a>
      <div  class="sprite cursor-list">
 <a   class="header-mobile-menu-link favorite-link link"><span class="menu-list-mob">Favorite</span></a>
 
