--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -34,7 +34,7 @@
       </a>
     <label class="switch switch-desktop">
   <!-- <input type="checkbox" checked> -->
-  <input id="theme-switcher" type="checkbox" checked>
+  <input id="theme-switcher" type="checkbox" >
   <span class="slider round"></span>
 </label>
    
