--- a/src/css/modalCokctails.css
+++ b/src/css/modalCokctails.css
@@ -27,7 +27,9 @@
     
 }
     
-
+.dark-theme .modal{
+    background-color: #232330;;
+}
 
 .modal__button {
     padding: 0;
@@ -54,6 +56,9 @@
     height: 18px;
 }
 
+.dark-theme .modal__icon{
+fill:var(--light-letters-color);
+}
 
 .modal-bottons {
     margin-top: 40px;
@@ -86,6 +91,9 @@
     line-height: 1.2;
     margin-bottom: 20px;
 }
+.dark-theme .modal-header__title{
+    color:var(--light-letters-color);
+}
 .modal-header__subtitle{
     color: var(--dark-letters-color);
     font-family: Poppins;
@@ -96,6 +104,9 @@
     text-transform: uppercase;
     margin-bottom: 8px;
 }
+.dark-theme .modal-header__subtitle {
+    color: var(--light-letters-color)
+}
 .modal-header__text{
     color: rgba(36, 36, 36, 0.50);
     font-family: Poppins;
@@ -105,6 +116,9 @@
     line-height: 1.29;
     margin-bottom: 20px;
     
+}
+.dark-theme .modal-header__text {
+    color: var(--light-letters-color)
 }
 .modal-header__list{
     display: inline-flex;
@@ -121,6 +135,10 @@
     line-height: 1.29;
 
   
+}
+
+.dark-theme .modal-header__list {
+    color: var(--light-letters-color)
 }
 
 .modal-header__link:hover{
@@ -192,7 +210,12 @@
 .modal-btn-back:hover{
     background: rgba(36, 36, 36, 0.20);
 }
-
+.dark-theme .modal-btn-back{
+    background: rgba(253, 253, 255, 0.10);
+    color: var(--light-letters-color);
+}
+.dark-theme .modal-btn-back:hover {
+    background: rgba(253, 253, 255, 0.20);}
 @media screen and (min-width: 768px) {
     .modal {
         transform: translate(-50%, -50%);
