--- a/src/css/modalIngredients.css
+++ b/src/css/modalIngredients.css
@@ -3,7 +3,9 @@
     font-size: 18px;
     line-height: 24px;
 }
-
+.dark-theme .ingredient-name{
+    color: #FDFDFF;
+}
 .ingredient-type {
     margin-top: 8px;
     font-weight: 600;
@@ -11,7 +13,9 @@
     line-height: 18px;
     color: rgba(36, 36, 36, 0.5);
 }
-
+.dark-theme .ingredient-type{
+    color: rgba(253, 253, 255, 0.50);
+}
 .ingredient-type::after {
     content: '';
     display: block;
@@ -34,11 +38,15 @@
     background-color: rgba(36, 36, 36, 0.5);
     border-radius: 4px;
 }
-
+.dark-theme .ingredient-descr-wrapper::-webkit-scrollbar-thumb{
+    background-color: rgba(253, 253, 255, 0.5);
+}
 .ingredient-descr-wrapper::-webkit-scrollbar-thumb:hover {
     background-color: rgba(36, 36, 36, 0.8);
 }
-
+.dark-theme.ingredient-descr-wrapper::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(253, 253, 255, 0.8);
+}
 .ingredient-descr {
     font-weight: 400;
     font-size: 14px;
@@ -46,6 +54,9 @@
     color: rgba(36, 36, 36, 0.5);
 }
 
+.dark-theme .ingredient-descr{
+    color: rgba(253, 253, 255, 0.50);
+}
 .ingredient-characteristic-list {
     margin-top: 40px;
     list-style: disc inside;
@@ -59,7 +70,9 @@
     font-size: 10px;
     color: rgba(36, 36, 36, 0.8);
 }
-
+.dark-theme .ingredient-characteristic-item::marker {
+    color: rgba(253, 253, 255, 0.80);
+}
 .ingredient-characteristic-descr {
     display: inline;
     font-weight: 400;
@@ -67,7 +80,9 @@
     line-height: 18px;
     color: rgba(36, 36, 36, 0.8);
 }
-
+.dark-theme .ingredient-characteristic-descr{
+color:rgba(253, 253, 255, 0.80);
+}
 @media screen and (min-width: 768px) {
     .modal-ingredient {
         min-height: 0;
