--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -43,7 +43,7 @@
 
           <img src="./img/hero/girl-mobile.png" alt="girl with cocktail" />
         </picture>
-        <picture class="elements-img-hero">
+        <picture class="black-elements-img-hero">
           <source
             srcset="
               ./img/hero/elements-desktop.png    1x,
@@ -62,6 +62,31 @@
             srcset="
               ./img/hero/elements-mobile.png    1x,
               ./img/hero/elements-mobile@2x.png 2x
+            "
+            media="(max-width:767.9px)"
+          />
+
+          <img src="./img/hero/girl-mobile.png" alt="girl with cocktail" />
+        </picture>
+        <picture class="white-elements-img-hero">
+          <source
+            srcset="
+              ./img/hero/black/elements-desktop.png    1x,
+              ./img/hero/black/elements-desktop@2x.png 2x
+            "
+            media="(min-width:1280px)"
+          />
+          <source
+            srcset="
+              ./img/hero/black/elements-tablet.png    1x,
+              ./img/hero/black/elements-tablet@2x.png 2x
+            "
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="
+              ./img/hero/black/elements-mobile.png    1x,
+              ./img/hero/black/elements-mobile@2x.png 2x
             "
             media="(max-width:767.9px)"
           />
