update favorite ingridients

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,3 +13,4 @@
 @import url('./modalIngredients.css');
 @import url('./cocktailsMarckup.css');
 @import url('./favCocktails.css');
+@import url('./favoriteingridints.css')
