--- a/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
+++ b/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
@@ -1,7 +1,7 @@
 
 <section class="markup__section">
      
-    <div class="container" >
+    <div class="container container-random-cocktails-gallary" >
        <h1 class="main-title">Cocktails</h1>   
         <ul class="js__cocktails__list cocktails-list"></ul>
     </div>
