--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,4 +13,5 @@
 @import url('./modalIngredients.css');
 @import url('./cocktailsMarckup.css');
 @import url('./favCocktails.css');
-@import url('./favoriteingridints.css')
+@import url('./favoriteingridints.css');
+@import url('./favoritecocktails.css')
