--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -68,7 +68,7 @@
 </label> -->
  <label class="switch">
   <!-- <input type="checkbox" checked> -->
-  <input id="theme-switcher" type="checkbox" checked>
+  <input id="theme-switcher-mobile" type="checkbox">
   <span class="slider round"></span>
 </label>
 
