--- a/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
+++ b/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
@@ -5,7 +5,6 @@
        <h1 class="main-title">Cocktails</h1>   
         <ul class="js__cocktails__list cocktails-list"></ul>
     </div>
-    <div id="pagination-container">
-    </div>
+    <div id="pagination" class="tui-pagination"></div>
    </section>
 
